--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>🐶PuppuSquad</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <title>🐶PuppySquad</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
     <div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Blog</a>
-            <a href="#">Faceit</a>
-            <a href="#">Steam</a>
+        <nav id = "navigation">
+            <a class="list active" href="#">Home</a>
+            <a class="list" href="#">About</a>
+            <a class="list" href="#">Blog</a>
+            <a class="list" href="#">Faceit</a>
+            <a class="list" href="#">Steam</a>
             <div class="animation start-home"> </div>
         </nav>
     </div>
+
+    <script type="text/javascript" src="js/active.js">
+    </script>
     
     <div class="wrapper">
         <div class="typing-demo">
