--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <div>
         <nav id = "navigation">
-            <a class="list active" href="#">Home</a>
-            <a class="list" href="#">About</a>
-            <a class="list" href="#">Blog</a>
-            <a class="list" href="#">Faceit</a>
-            <a class="list" href="#">Steam</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Faceit</a>
+            <a href="steam.html">Steam</a>
             <div class="animation start-home"> </div>
         </nav>
     </div>
