--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>🐶PuppySquad</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
 
+<body>
     <div>
-        <nav id = "navigation">
+        <nav id="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Blog</a>
@@ -18,13 +19,20 @@
         </nav>
     </div>
 
+    <div id="background-video">
+        <div class="wrapper">
+            <div class="typing-demo">
+                Puppy Squad
+            </div>
+        </div>
+        <!-- <video autoplay muted loop id="myVideo">
+            <source src="video.mp4" type="video/mp4">
+        </video> -->
+    </div>
+    <div id="background-color"></div>
     <script type="text/javascript" src="js/active.js">
     </script>
-    
-    <div class="wrapper">
-        <div class="typing-demo">
-            Puppy Squad
-        </div>
-    </div>
+
 </body>
+
 </html>
