--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
 </head>
 
 <body>
-    <div>
-        <nav id="navigation">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Blog</a>
-            <a href="#">Faceit</a>
-            <a href="steam.html">Steam</a>
-            <div class="animation start-home"> </div>
-        </nav>
+    <div id="main">
+        <div>
+            <nav id="navigation">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Blog</a>
+                <a href="#">Faceit</a>
+                <a href="steam.html">Steam</a>
+                <div class="animation start-home"> </div>
+            </nav>
+        </div>
     </div>
 
-    <div id="background-video">
+    <div>
+        <video id="background-video" autoplay muted loop id="myVideo">
+            <source src="video.mp4" type="video/mp4">
+        </video>
         <div class="wrapper">
             <div class="typing-demo">
                 Puppy Squad
             </div>
         </div>
-        <!-- <video autoplay muted loop id="myVideo">
-            <source src="video.mp4" type="video/mp4">
-        </video> -->
+
     </div>
     <div id="background-color"></div>
     <script type="text/javascript" src="js/active.js">
